crates/mdbook-permalinks/tests/site_url_invalid/stderr/data.txt
ERROR mdbook-permalinks: could not initialize the preprocessor

Caused by:
    0: invalid config in book.toml
    1: TOML parse error at line 6, column 12
         |
       6 | site-url = "../book"
         |            ^^^^^^^^^
       a base URL cannot contain `..`
       
ERROR mdbook_core::utils: The "permalinks" preprocessor exited unsuccessfully with [EXIT_CODE] 1 status
